# OxideCode

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build-universal.yml
bindings/jvm/: Cargo.toml
bindings/jvm/src/: lib.rs
bindings/node/: Cargo.toml
bindings/node/src/: lib.rs
core/: Cargo.toml
core/src/: backend.rs  config.rs  lib.rs
core/src/agent/: mod.rs
core/src/autocomplete/: cache.rs  debounce.rs  engine.rs  mod.rs
core/src/nes/: delta.rs  engine.rs  hint.rs  mod.rs  prompt.rs
core/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
intellij-plugin/: build.gradle.kts
intellij-plugin-new/: build.gradle.kts
intellij-plugin-new/src/main/kotlin/dev/sweep/assistant/: Sweep.kt
intellij-plugin-old/: build.gradle.kts
intellij-plugin-old/src/main/kotlin/com/oxidecode/: CoreBridge.kt  EditorContext.kt
intellij-plugin-old/src/main/kotlin/com/oxidecode/actions/: LookupTabHandler.kt
intellij-plugin-old/src/main/kotlin/com/oxidecode/autocomplete/: AutocompleteGuards.kt  LookupUiCustomizer.kt  LookupUiStartupActivity.kt  OxideCompletionContributor.kt
intellij-plugin-old/src/main/kotlin/com/oxidecode/editor/: GhostTextRenderers.kt
intellij-plugin-old/src/main/kotlin/com/oxidecode/nes/: JumpHintPopupRenderer.kt  NesActions.kt  NesEditorListener.kt  NesGutterIcon.kt  NesHintManager.kt  NesPopupDiff.kt  NesPopupPreview.kt  NesSessionTracker.kt
intellij-plugin-old/src/main/kotlin/com/oxidecode/settings/: OxideCodeConfigurable.kt  OxideCodeSettings.kt
intellij-plugin-v2/: build.gradle.kts
intellij-plugin-v2/src/main/kotlin/com/oxidecode/: CoreBridge.kt
intellij-plugin-v2/src/main/kotlin/com/oxidecode/autocomplete/: AutocompleteHighlightingUtils.kt  AutocompleteUtils.kt
intellij-plugin-v2/src/main/kotlin/com/oxidecode/components/: TruncatedLabel.kt
intellij-plugin-v2/src/main/kotlin/com/oxidecode/controllers/: OxideCodeGhostText.kt
intellij-plugin-v2/src/main/kotlin/com/oxidecode/data/: IDEVersion.kt  Models.kt  RecentFilesBase.kt  RecentlyUsedFiles.kt  SelectedSnippet.kt
intellij-plugin-v2/src/main/kotlin/com/oxidecode/listener/: FileActions.kt  SelectedFileChangeListener.kt
intellij-plugin-v2/src/main/kotlin/com/oxidecode/services/: AutocompleteIpResolverService.kt  ClipboardTrackingService.kt  CodeEntityExtractor.kt  FileSearcher.kt  FileUsageManager.kt  GitIndexCleanupService.kt  IdeaVimIntegrationService.kt  NotificationDeduplicationService.kt  OxideCodeColorChangeService.kt  OxideCodeConstantsService.kt  OxideCodeNonProjectFilesService.kt  OxideCodeProblemRetriever.kt  OxideCodeProjectService.kt  SessionMessageList.kt  StreamStateService.kt
intellij-plugin-v2/src/main/kotlin/com/oxidecode/settings/: OxideCodeConfig.kt  OxideCodeConfigurable.kt  OxideCodeMetaData.kt  OxideCodeSettings.kt
intellij-plugin-v2/src/main/kotlin/com/oxidecode/startup/: OxideCodeStartupActivity.kt
intellij-plugin-v2/src/main/kotlin/com/oxidecode/theme/: EditorThemeManager.kt  OxideCodeColors.kt  OxideCodeIcons.kt  RoundedHighlightPainter.kt
intellij-plugin-v2/src/main/kotlin/com/oxidecode/utils/: ActionUtils.kt  CompressionUtils.kt  DatabaseOperationQueue.kt  DiffManager.kt  DiffUtils.kt  EditorUtils.kt  Extensions.kt  FileDisplayUtils.kt  FileSearchUtils.kt  FileUtils.kt  FontUtils.kt  GithubUtils.kt  HighlightingUtils.kt  LRUCache.kt  OxideCodeBundle.kt  OxideCodeConstants.kt  PluginConflictUtils.kt  ReflectionUtils.kt  RequestUtils.kt  StringDistance.kt  StringUtils.kt  TabUtils.kt  TranslucentIcon.kt  Utils.kt
intellij-plugin-v2/src/main/kotlin/com/oxidecode/views/: BlockDisplay.kt  ChipPanel.kt  CircularLabel.kt  Darkenable.kt  DarkenableLabel.kt  EditorComponentInlaysManager.kt  HighlightedBlock.kt  Hoverable.kt  PopupEditorComponent.kt  RoundedButton.kt  RoundedPanel.kt  RoundedTextArea.kt  ToggleButton.kt
intellij-plugin-v2/src/main/resources/messages/: oxidecode.properties
intellij-plugin/src/main/kotlin/com/oxidecode/: CoreBridge.kt  EditorContext.kt
intellij-plugin/src/main/kotlin/com/oxidecode/actions/: LookupTabHandler.kt
vscode-extension/: package.json
vscode-extension/scripts/: build-native.js
vscode-extension/src/: autocomplete.ts  bridge.ts  extension.ts  nes.ts
vscode-extension/src/api/: client.ts
vscode-extension/src/core/: config.ts  native-bridge.ts
vscode-extension/src/editor/: inline-edit-provider.ts
vscode-extension/src/extension/: activate.ts  status-bar.ts
vscode-extension/src/telemetry/: document-tracker.ts
webview-ui/: index.html  package.json  vite.config.ts
webview-ui/src/: App.css  App.svelte  App.tsx  main.ts
webview-ui/src/bridge/: host.ts
(+55 files in other folders)
