[package]
name = "oxidecode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "oxidecode_core"
crate-type = ["rlib"]

[dependencies]
omniference = { workspace = true }

# HTTP client for raw /v1/completions (base-model FIM — bypasses omniference
# which only supports /v1/chat/completions)
reqwest = { workspace = true }
eventsource-stream = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

lru = { workspace = true }
dashmap = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
